--- a/guest/guestSearch.kv
+++ b/guest/guestSearch.kv
@@ -1,31 +1,16 @@
-BoxLayout:
-    orientation:'vertical'
-    BoxLayout:
-        size_hint: 1,None
-        height:50
-        orientation:'horizontal'
-        pos:0,root.height-50
-        TextInput
-        TextInput
-        Button
-        Button
-            text: 'Search->'
-        Button
-            text: '<-Back'
-    BoxLayout:
-        size_hint: 1,None
-        height:50
-        orientation:'horizontal'
-        Label:
-            text:"First Name"
-        Label:
-            text:"Last Name"
-        Label:
-            text:"Email"
-        Label:
-            text:"Phone"
-        Label:
-            text:"City"
-    BoxLayout:
-        size_hint: 1,1
+BoxLayout
+    orientation:"vertical"
+    size_hint:1,1
+    AnchorLayout:
+        anchor_x: 'right'
+        anchor_y: 'top'
+        SearchBar:
+            id: _search_bar
+            size_hint: 1,None
+    AnchorLayout:
+        anchor_x: 'right'
+        anchor_y: 'top'
+        SearchBarLabel:
+            id: _search_label
+            size_hint: 1,None
 
